# Portfolio

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pyproject.toml  LICENSE.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg
data_engineering/airflow/: airflow.cfg  docker-compose.yaml  install_airflow.sh  webserver_config.py
data_engineering/airflow/dags/: basic_etl_dag.py  etl_1_extract_dag.py  etl_2_transform_dag.py  etl_3_load_dag.py  one_task_dag.py  process-employees.py  two_task_dag.py
data_engineering/airflow/example_dags/: calling_task.py  example_docker_operator.py  example_from_file.py  example_kubernetes_operator.py  example_python_operator.py  example_sensor_decorator.py  reusing_d_task.py  tutorial.py  tutorial_taskflow_api.py
data_engineering/pyspark/: .gitignore  PySpark_by_examples.ipynb  etl.py  etl.py.dvc  first_data.csv  pyspark_1.py  pyspark_1_template.ipynb  pyspark_template.ipynb  quickstart.ipynb  six_exercises.ipynb
data_engineering/pyspark/simple_app/: simple_app.py
data_engineering/sql/postgre_sql/: psql_queries_for_animal_shelter.sql  queries_for_animal_shelter.sql
java/training/: Hello.java
machine_learning/NLP/sentiment_analysis/: hugging_face.ipynb  nltk.ipynb
machine_learning/NLP/word2vec/: nlp.ipynb
machine_learning/NLP/youtube_llm/: openai_key.txt  youtube_llm.ipynb
machine_learning/apartment_for_rent/: apartments.ipynb  apartments_for_rent_classified_100K.csv  apartments_for_rent_classified_10K.csv
machine_learning/clusters/: comparison_of_algorithms.ipynb
machine_learning/decision_trees/: examples.ipynb  iris.ipynb
machine_learning/landslides/: Global_Landslide_Catalog_Export.csv
machine_learning/meteorite_landings/: Meteorite_Landings.csv  cneos_fireball_data.csv  meteorite_landings_analysis.ipynb  meteorites.csv  meteorites_2.csv
machine_learning/mnist/: mnist_digits.ipynb
machine_learning/mushrooms_dataset/: mushrooms.csv  mushrooms.ipynb
machine_learning/neural_networks/: example.ipynb
machine_learning/pca/: example.ipynb
machine_learning/sentiment_analysis/: hugging_face.ipynb  nltk.ipynb
machine_learning/tensorflow/: .gitignore  tfdv_basic_spending.ipynb.dvc
machine_learning/world_map/: OGRGeoJSON.dbf  OGRGeoJSON.shp
machine_learning/xgboost/: first_xgboost.ipynb
machine_learning/youtube_llm/: youtube_llm.ipynb
python/api/: using_apis.ipynb  using_apis.py
python/data_structures/: deque.py  queue_ll.py  stack_class.py
python/decorators/: decorators.py  decorators_calls.py  plugins_calls.py
python/design_patterns/abstract_factory/: car_app.py
python/dto/: game_character.ipynb
python/games_in_python/: connectfour.py  snake.py  tetris.py
python/neural_networks_from_scratch/: mlp.py
python/training/: counting_partitions.py  exercise_matrix_rhomb.py  exercise_operator.py  exercise_trip.py  general_python.ipynb  listing.py  numpy.ipynb  pandas.ipynb
scala/firstApp/: build.sbt
scala/training/: HelloWorld.tasty  WindowFunctions.scala  pi.scala
sql/mssql_server/: example_window_queries.sql
(+80 files in other folders)
