[metadata]
name = Bartlomiej_Kachniarz_Portfolio
version = attr: 0.0.1
url = https://github.com/Bartlomiej-Kachniarz/Portfolio
description = Portfolio_BK
long_description = 
    "This is a portfolio of Bartlomiej Kachniarz. 
    This repository include projects from the fields of machine learning, devops, data engineering and python programming."
author = Bartlomiej Kachniarz
author_email = bartlomiej.kachniarz01@gmail.com
keywords = portfolio, kachniarz
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
python_requires = 3.11
install_requires =
    geopandas~=0.13.2
    geopy~=2.3.0
    huggingface-hub~=0.16.4
    ipykernel~=6.25.0
    ipython~=8.14.0
    keras~=2.13.1
    matplotlib~=3.7.2
    mlflow~=2.6.0
    nltk~=3.8.1
    numpy~=1.24.3
    pandas~=2.0.3
    scipy~=1.11.1
    Scrapy~=2.10.0
    seaborn~=0.12.2
    scikit-learn~=1.3.0
    tensorflow~=2.13.0
    xgboost~=1.7.6


[flake8]
ignore = C101, C901, W503, E741, E722, E203, E302, F401
max-line-length = 120
max-complexity = 10
select = B,C,E,F,W,B9
exclude = .venv/,tests/*