[metadata]
name = Bartlomiej_Kachniarz_Portfolio
version = attr: 0.0.1
url = https://github.com/Bartlomiej-Kachniarz/Portfolio
description = Portfolio_BK
long_description = 
    "This is a portfolio of Bartlomiej Kachniarz. 
    This repository include projects from the fields of machine learning, devops, data engineering and python programming."
author = Bartlomiej Kachniarz
author_email = bartlomiej.kachniarz01@gmail.com
keywords = portfolio, kachniarz
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
python_requires = >=3.11
packages =
    python
    data_engineering
    machine_learning

install_requires =
    colorama~=0.4.6
    geopandas~=0.14.0
    geopy~=2.4.0
    itemadapter~=0.8.0
    matplotlib~=3.8.0
    mlflow~=2.7.1
    nest_asyncio~=1.5.8
    nltk~=3.8.1
    openai~=0.28.1
    pandas~=2.2.2
    pendulum~=3.0.0
    playsound~=1.3.0
    psycopg2_binary~=2.9.9
    pygame~=2.5.2
    pyspark~=3.5.2
    python-dotenv~=1.0.1
    Requests~=2.32.3
    scikit_learn~=1.3.2
    scipy~=1.14.1
    Scrapy~=2.11.0
    scrapy_splash~=0.9.0
    seaborn~=0.13.2
    setuptools~=69.1.0
    Shapely~=2.0.6
    SQLAlchemy~=1.4.49
    tensorflow_data_validation~=1.15.1
    tensorflow_datasets~=4.9.3
    transformers~=4.34.1
    youtube_transcript_api~=0.6.1


[flake8]
ignore = C101, C901, W503, E741, E722, E203, E302, F401
max-line-length = 120
max-complexity = 10
select = B,C,E,F,W,B9
exclude = .venv/,tests/*